--- a/JiangXinhou/D3/line.html
+++ b/JiangXinhou/D3/line.html
@@ -5,17 +5,41 @@
   <title>Line</title>
 
   <style>
+  body {
+    margin: 0;
+    background: #000;
+  }
+
+  .svg {  }
+
   .axis path,
   .axis line {
     fill: none;
-    stroke: black;
+    stroke: white;
     shape-rendering: crispEdges;
   }
 
   .axis text {
     font-family: sans-serif;
     font-size: 11px;
+    fill: white;
   }
+
+  .line {
+    stroke-width:4;
+    fill: none;
+  }
+  .linecircle {
+  }
+
+  .bar {
+      fill: steelblue;
+    }
+
+  .bar:hover {
+    fill: brown;
+  }
+
   </style>
 </head>
 
@@ -23,28 +47,54 @@
   <script src="https://d3js.org/d3.v3.min.js"></script>
   
   <script>
-  // 数据定义
-  var size = {width:500, height:400};
-  var margin = {left:50, top:30, right:50, bottom:50};
-  var Swidth = size.width + margin.left;
-  var Sheight = size.height + margin.top;
-  // 数据缓冲
+  // 尺寸数据定义
+  var size = {width:1000, height:300};                  // 线图上半部分的尺寸
+  var margin = {left:50, top:30, right:50, bottom:50};  // 边界空间
+  var Swidth = size.width + margin.left;                // svg的宽度
+  var Sheight = size.height + margin.top;               // svg的高度
+  
+  // 横轴坐标
   var x = [2005,2006,2007,2008,2009,2010,2011,2012,2013,2014];
-  var y = [23413,45324,16932,32157,12311,10232,7896,8314,21032,84321];
+  var x2 = ["2005年","2006年","2007年","2008年","2009年","2010年","2011年","2012年","2013年","2014年"];
+
+  // y轴数据上限
+  var yMax = 10;
+
+  // 数据缓冲
   var Data = [];
+  // 折线对象数组
+  var Lines = [];
+  // 折线路径数组
+  var Paths = [];
 
   // 添加svg元素
   var svg = d3.select("body")
               .append("svg")
+              .attr('class','svg')
               .attr("width",Swidth + margin.right)
-              .attr("height",Sheight + margin.bottom);
+              .attr("height",2*Sheight + margin.bottom);
 
   // 颜色
   var color = d3.scale.category10();
+
   // 数据读取
   d3.tsv("test.txt", function(d){
-    Data.push(d);
-    //console.log(d);
+    // 将一组组数据push到数据缓冲
+    var groupData = [];
+    groupData.push(+d.a);
+    groupData.push(+d.b);
+    groupData.push(+d.c);
+    groupData.push(+d.d);
+    groupData.push(+d.e);
+    groupData.push(+d.f);
+    groupData.push(+d.g);
+    groupData.push(+d.h);
+    groupData.push(+d.i);
+    groupData.push(+d.j);
+    Data.push(groupData);
+    //console.log(groupData);
+
+    // 每次返回某一年的数据
     return{
       a:+d.a,
       b:+d.b,
@@ -59,30 +109,40 @@
     }
 
   },function(error, data){
-    console.log(data);
+
+    // 返回一个对象数组，每个对象有十年中每年的一个数据
+    console.log(Data);
+
     // 比例尺
     var scaleX = d3.scale.linear()
-                         .domain([2005,2014])
-                         .range([0,size.width]);
+                         .domain([2005,2014])    // 数据范围
+                         .range([0,size.width]); // 界面尺寸范围
     var scaleY = d3.scale.linear()
-                         .domain([0,50000])
+                         .domain([0,yMax])
                          .range([size.height,0]);
+    var scaleY2 = d3.scale.linear()
+                         .domain([0,yMax])
+                         .range([0,size.height]);
     // 坐标轴
+    // 定义横轴
     var axisX = d3.svg.axis()
                       .scale(scaleX)
                       .orient("bottom")
-                      .ticks(x.length);
+                      .ticks(x.length); // 标注个数
+    // 调整横位置并添加横轴标签
     svg.append("g")
         .attr("class","axis")
         .attr("transform","translate("+margin.left+","+Sheight+")")
         .call(axisX)
         .append("text")
         .text("years")
-        .attr("transform","translate("+size.width+","+"0)");
+        .attr("transform","translate("+(size.width+10)+","+"0)");
+
+    // 定义纵轴
     var axisY = d3.svg.axis()
                       .scale(scaleY)
                       .orient("left")
-                      .ticks(y.length);
+                      .ticks(10); // 标注个数
     svg.append("g")
        .attr("class","axis")
        .attr("transform","translate("+margin.left+","+margin.top+")")
@@ -90,131 +150,87 @@
        .append("text")
        .text("data");
 
-    // 折线图
-    // A
-    var lineA = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.a); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineA(data))
-                  .attr('stroke','red')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
+    var axisY2 = d3.svg.axis()
+                      .scale(scaleY2)
+                      .orient("left")
+                      .ticks(10); // 标注个数
+    svg.append("g")
+       .attr("class","axis")
+       .attr("transform","translate("+margin.left+","+Sheight+")")
+       .call(axisY2)
+       .append("text")
+       .attr("transform","translate("+0+","+(size.height+10)+")")
+       .text("data");
 
-    // B
-    var lineB = d3.svg.line()
+
+
+    // 折线图
+    // 文字标签
+    var tips_text;
+    // 折线函数
+    var line = d3.svg.line()
                      .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.b); })
+                     .y(function(d,i) { return scaleY(d); })
                      .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineB(data))
-                  .attr('stroke','blue')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // C
-    var lineC = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.c); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineC(data))
-                  .attr('stroke','orange')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // D
-    var lineD = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.d); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineD(data))
-                  .attr('stroke','orange')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // E
-    var lineE = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.e); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineE(data))
-                  .attr('stroke','black')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // F
-    var lineF = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.f); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineF(data))
-                  .attr('stroke','pink')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // G
-    var lineG = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.g); })
-                     .interpolate('purple');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineG(data))
-                  .attr('stroke','green')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // H
-    var lineH = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.h); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineH(data))
-                  .attr('stroke','yellow')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // I
-    var lineI = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.i); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineI(data))
-                  .attr('stroke','blue')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
-    // J
-    var lineJ = d3.svg.line()
-                     .x(function(d,i) { return scaleX(2005+i); })
-                     .y(function(d,i) { return scaleY(d.j); })
-                     .interpolate('linear');
-    var path = svg.append('path')
-                  .attr('class', 'line')
-                  .attr('transform','translate('+margin.left+','+margin.top+')')
-                  .attr('d', lineJ(data))
-                  .attr('stroke','red')
-                  .attr('stroke-width',2)
-                  .attr('fill','none');
+
+    for (var i = 0; i < Data.length; i++)
+    {
+      var bar = svg.selectAll("bar")
+                  .data(Data[i])
+                  .enter()
+                  .append("rect")
+                  .attr("class", "bar")
+                  .attr('transform','translate('+margin.left+','+0+')')
+                  .attr("x", function(d,ii) { return scaleX(2005+ii); })
+                  .attr("y", Sheight)
+                  .attr("width", 5)
+                  .attr("height", function(d) { return size.height - scaleY(d); });
+
+      // 绘制当前折线
+      var path = svg.append('path')
+                    .attr('class', 'line')
+                    .attr('transform','translate('+margin.left+','+margin.top+')')
+                    .attr('stroke', color(i))
+                    .attr('d', line(Data[i]));
+      // 保存到折线数组
+      Paths.push(path);
+      
+      // 添加圆点和圆点的交互
+      var circle = svg.selectAll('circle')
+                 .data(Data[i])
+                 .enter()
+                 .append('g')
+                 .append('circle')
+                 .attr('class','linecircle')
+                 .attr('transform','translate('+margin.left+','+margin.top+')') // 圆点偏移
+                 .attr('cx', line.x())   // 圆点坐标
+                 .attr('cy', line.y())   // 圆点坐标
+                 .attr('r', 6)           // 圆点半径
+                 .attr('fill','purple')  // 圆点颜色
+                 // 圆点交互
+                 .on('mouseover', function() {
+                  // 变大
+                  d3.select(this).transition().duration(500).attr('r', 10).attr('fill','yellow');
+
+                  // 获取鼠标位置
+                  var mouse = d3.mouse(this);
+                  // 显示标签
+                  tips_text = svg.append('text')
+                                 .attr('x',mouse[0]+20)
+                                 .attr('y',mouse[1]+10)
+                                 .attr('fill','yellow')
+                                 .text(235535);
+                })
+                 .on('mouseout', function() {
+                  // 恢复
+                  d3.select(this).transition().duration(500).attr('r', 5).attr('fill','purple');
+                  // 移除标签
+                  tips_text.remove();
+                });
+    }
+
 
   });
-
 
   </script>
 
