--- a/JiangXinhou/D3/tourism_age_v1.html
+++ b/JiangXinhou/D3/tourism_age_v1.html
@@ -90,7 +90,7 @@
   var Sheight = size.height + margin.top;               // svg的高度
   
   // 图例数据
-  var dataTitles = ["25-44岁","45-64岁","15-24岁","65岁以上","14岁以下","平均"];
+  var dataTitles = ["Age 25-44","Age 45-64","Age 15-24","Age 65+","Age 14-","Average"];
   // 横轴坐标
   var x = [2005,2006,2007,2008,2009,2010,2011,2012,2013,2014];
   // x轴tick
@@ -232,9 +232,9 @@
     /*************** 1.文字标签 ***************/
     var tips_text;
     tips_text = d3.select("body")
-  				 .append('div')
-  				 .attr("id", "tips_text")
-  				 .style("opacity",0.0);
+        				 .append('div')
+        				 .attr("id", "tips_text")
+        				 .style("opacity",0.0);
 
   	/*************** 2.绘制图例 ***************/
   	var statement = svg.selectAll("statement")
@@ -249,7 +249,7 @@
           		.attr("width", 15)
           		.attr("height",15)
           		.style("font-size", 20)
-              .on("mouseover", function(d, i){
+              .on("mouseover", function(d, i) {
                 // 重绘
                 mouseoverAmi(i);
                 // 显示标签
@@ -258,7 +258,7 @@
                           .style("opacity",1.0)
                           .html(dataTitles[d]); // 显示数据
               })
-              .on("mosemove", function(){
+              .on("mosemove", function() {
                 tips_text.style("left",d3.event.pageX + "px")
                          .style("top",(d3.event.pageY+20) + "px");
               })
@@ -274,7 +274,7 @@
     var line = d3.svg.line()
                      .x(function(d,i) { return scaleX(2005+i); })
                      .y(function(d,i) { return scaleY(d); })
-                     .interpolate('monotone'); // linear，step-after
+                     .interpolate('monotone'); // linear，linear-closed,step,step-after，step-before,basis,basis-open,basis-closed,bundle,cardinal,cardinal-open,cardinal-closed,monotone
     // 平均数折线(静态)
     var path = svg.append('path')
                     .style("stroke-width", 10)
@@ -392,7 +392,7 @@
                   			     .style("opacity",1.0)
                              .html(d); // 显示数据
                   })
-                  .on("mosemove", function(){
+                  .on("mousemove", function(){
                   	tips_text.style("left",d3.event.pageX + "px")
                   			     .style("top",(d3.event.pageY+20) + "px");
                   })
