--- a/JiangXinhou/D3/tourism_age_v2.html
+++ b/JiangXinhou/D3/tourism_age_v2.html
@@ -89,7 +89,7 @@
   var Sheight = size.height + margin.top;               // svg的高度
   
   // 图例数据
-  var dataTitles = ["25-44岁","45-64岁","15-24岁","65岁以上","14岁以下","平均"];
+  var dataTitles = ["Age 25-44","Age 45-64","Age 15-24","Age 65+","Age 14-","Average"];
   // 横轴坐标
   var x = [2005,2006,2007,2008,2009,2010,2011,2012,2013,2014];
   // x轴tick
@@ -377,7 +377,7 @@
                   			     .style("opacity",1.0)
                              .html(d); // 显示数据
                   })
-                  .on("mosemove", function(){
+                  .on("mousemove", function(){
                   	tips_text.style("left",d3.event.pageX + "px")
                   			     .style("top",(d3.event.pageY+20) + "px");
                   })
