--- a/JiangXinhou/D3/tourism_area_v2.html
+++ b/JiangXinhou/D3/tourism_area_v2.html
@@ -377,7 +377,7 @@
                   			     .style("opacity",1.0)
                              .html(d); // 显示数据
                   })
-                  .on("mosemove", function(){
+                  .on("mousemove", function(){
                   	tips_text.style("left",d3.event.pageX + "px")
                   			     .style("top",(d3.event.pageY+20) + "px");
                   })
