--- a/JiangXinhou/D3/tourism_age_v2.html
+++ b/JiangXinhou/D3/tourism_age_v2.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
   <meta charset="utf-8"> 
-  <title>不同年龄段外国游客</title>
+  <title>Foreign Tourists Of Different Age</title>
 
   <style>
   body{
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-<h3 id="title">不同年龄段外国游客</h3>
+<h3 id="title">Foreign Tourists Of Different Age</h3>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
 
@@ -105,7 +105,7 @@
   // 圆点半径
   var radius = 3;
   // 图例之间间距
-  var stateD = 20;
+  var stateD = 40;
 
   // 数据缓冲
   var Data = [];
