--- a/JiangXinhou/D3/tourism_country_v1.html
+++ b/JiangXinhou/D3/tourism_country_v1.html
@@ -209,7 +209,7 @@
 
     /*********************************************** 柱状图、折线图 **************************************************************/
 
-    /*************** 0.绘制国家地图地图 ***************/
+    /*************** 0.绘制国家地图 ***************/
     var map = svg.selectAll("map")
                .data(imageData[initIndex])
                .enter()
