--- a/JiangXinhou/D3/index.html
+++ b/JiangXinhou/D3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>The Dynamic Data Of Foreign Tourists Traval To China Over The Past 10 Years</title>
 <style type="text/css" media="screen">
   body {
     background-color: #0E2528;
@@ -18,13 +18,23 @@
   }
 
   li {
-    margin-top: 40px;
+    margin-top: 20px;
     margin-left: 20px;
     width: auto;
     float: left;
     list-style-type: none;
   }
 
+  hr {
+    border: none;
+    height: 2px;
+    border-top: 2px dotted white;
+  }
+  /* 标题 */
+  #title{
+    color: #F1DCD1;
+    font-family:Verdana;
+  }
   /* 文字静态样式 */
   text {
     text-anchor: middle;
@@ -33,10 +43,14 @@
 </style>
 </head>
 <body>
+<h3 id="title">The Dynamic Data Of Foreign Tourists Traval To China Over The Past 10 Years</h3>
 <ul id="index-group">
 <li class="index"><a href="tourism_age_v1.html">OF Different Age<a></div>
+<hr/>
 <li class="index"><a href="tourism_country_v1.html">From Different Country<a></div>
+<hr/>
 <li class="index"><a href="tourism_area_v1.html">From Different Area<a></div>
+<hr/>
 </ul>
 
 </body>
@@ -53,7 +67,9 @@ $(document).ready(function(){
 
 // 文字云数据
 var cloudText = [["25-44","45-64","15-24",">65","<14"],["Japan","Malaysia","Philippines","Singapore","Korea","Thailand","British","Germany","France","Italy","Netherlands","Russia","Canada","America","Australia","NewZealand"],["Aisa","Europe","North America","Oceania","Africa","Latin America"]];
-var Data = [];
+var Data1 = [];
+var Data2 = [];
+var Data3 = [];
 var cloudScale = [];
 // 文字云区域尺寸
 var cloudSize = [800, 600];
@@ -68,6 +84,19 @@ var svg = d3.select("body")
             .append("svg")
             .attr("width", svgSize.width)
             .attr("height", svgSize.height);
+
+/*************** 0.绘制国家地图 ***************/
+var imageData = ["china.png"];
+    var map = svg.selectAll("map")
+               .data(imageData)
+               .enter()
+               .append("image")
+               .attr("x",0)
+               .attr("y",0)
+               .attr("width", 600)
+               .attr("height", 400)
+               .attr("opacity", 1.0)
+               .attr("xlink:href",function(d){return d;});
 
 /****************************************************** 数据读取 *************************************************************/
   // 1.读取年龄数据
@@ -84,21 +113,23 @@ var svg = d3.select("body")
     groupData.push(+d.h);
     groupData.push(+d.i);
     groupData.push(+d.j);
-    Data.push(groupData);
+    Data1.push(groupData);
     console.log(groupData);
 
   },function(error, data){
     // 返回一个对象数组，每个对象有十年中每年的一个数据
-    console.log(Data);
+    console.log(Data1);
     // 平均数据
-    var sumData = [0,0,0,0,0,0,0,0,0,0];
-    for(var i = 0; i < 10; i++){
-      for(var j = 0; j < Data.length; j++){
-        sumData[i] += Data[j][i];
+    var averageData = [];
+    for(var i = 0; i < Data1.length;  i++){
+      var sum = 0;
+      for(var j = 0; j < 10; j++){
+        sum += Data1[i][j];
       }
-      sumData[i] /= Data.length*5;
+      sum /= 100;
+      averageData.push(sum);
     }
-    cloudScale.push(sumData);
+    cloudScale.push(averageData);
 
     // 2.读取国家数据
     d3.tsv("country.txt", function(d){
@@ -114,21 +145,23 @@ var svg = d3.select("body")
     groupData.push(+d.h);
     groupData.push(+d.i);
     groupData.push(+d.j);
-    Data.push(groupData);
+    Data2.push(groupData);
     console.log(groupData);
 
   },function(error, data){
     // 返回一个对象数组，每个对象有十年中每年的一个数据
-    console.log(Data);
+    console.log(Data2);
     // 平均数据
-    var sumData = [0,0,0,0,0,0,0,0,0,0];
-    for(var i = 0; i < 10; i++){
-      for(var j = 0; j < Data.length; j++){
-        sumData[i] += Data[j][i];
+    var averageData = [];
+    for(var i = 0; i < Data2.length;  i++){
+      var sum = 0;
+      for(var j = 0; j < 10; j++){
+        sum += Data2[i][j];
       }
-      sumData[i] /= Data.length*4;
+      sum /= 30;
+      averageData.push(sum);
     }
-    cloudScale.push(sumData);
+    cloudScale.push(averageData);
 
     // 3.读取地区数据
     d3.tsv("area.txt", function(d){
@@ -144,21 +177,23 @@ var svg = d3.select("body")
     groupData.push(+d.h);
     groupData.push(+d.i);
     groupData.push(+d.j);
-    Data.push(groupData);
+    Data3.push(groupData);
     console.log(groupData);
 
   },function(error, data){
     // 返回一个对象数组，每个对象有十年中每年的一个数据
-    console.log(Data);
+    console.log(Data3);
     // 平均数据
-    var sumData = [0,0,0,0,0,0,0,0,0,0];
-    for(var i = 0; i < 10; i++){
-      for(var j = 0; j < Data.length; j++){
-        sumData[i] += Data[j][i];
+    var averageData = [];
+    for(var i = 0; i < Data3.length;  i++){
+      var sum = 0;
+      for(var j = 0; j < 10; j++){
+        sum += Data3[i][j];
       }
-      sumData[i] /= Data.length*5;
+      sum /= 100;
+      averageData.push(sum);
     }
-    cloudScale.push(sumData);
+    cloudScale.push(averageData);
 
     // 默认显示第一个
     updateCloud(0);
