--- a/JiangXinhou/D3/tourism_area_v1.html
+++ b/JiangXinhou/D3/tourism_area_v1.html
@@ -2,12 +2,16 @@
 <html> 
 <head> 
   <meta charset="utf-8"> 
-  <title>各大洲入境游客</title>
+  <title>Foreign Tourists From Different Area</title>
 
   <style>
   body{
     margin: 0;
     background: #0E2528; /*背景色*/
+  }
+  a {
+    text-decoration: none;
+    color: white;
   }
   /* 标题 */
   #title{
@@ -74,11 +78,11 @@
     stroke-width:2;
   }
   </style>
-
 </head>
 
 <body>
-<h3 id="title">各大洲入境游客</h3>>
+<h3 id="title">Foreign Tourists From Different Area</h3>
+<h5><a href="tourism_area_v2.html">Version2</a></h5>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
 
@@ -90,7 +94,7 @@
   var Sheight = size.height + margin.top;               // svg的高度
   
   // 图例数据
-  var dataTitles = ["亚洲","欧洲","北美洲","大洋洲及太平洋岛屿","非洲","拉丁美洲","平均"];
+  var dataTitles = ["Aisa","Europe","North America","Oceania","Africa","Latin America","Average"];
   // 横轴坐标
   var x = [2005,2006,2007,2008,2009,2010,2011,2012,2013,2014];
   // x轴tick
@@ -106,7 +110,7 @@
   // 圆点半径
   var radius = 5;
   // 图例之间间距
-  var stateD = 20;
+  var stateD = 40;
 
   // 数据缓冲
   var Data = [];
