--- a/JiangXinhou/D3/tourism_area_v2.html
+++ b/JiangXinhou/D3/tourism_area_v2.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
   <meta charset="utf-8"> 
-  <title>各大洲入境游客</title>
+  <title>Foreign Tourists From Different Area</title>
 
   <style>
   body{
@@ -77,10 +77,9 @@
 </head>
 
 <body>
-<h3 id="title">各大洲入境游客</h3>
+<h3 id="title">Foreign Tourists From Different Area</h3>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
-
   <script>
   /***************************************************** 数据定义 *************************************************************/
   var size = {width:1000, height:300};                  // 线图上半部分的尺寸
@@ -89,7 +88,7 @@
   var Sheight = size.height + margin.top;               // svg的高度
   
   // 图例数据
-  var dataTitles = ["亚洲","欧洲","北美洲","大洋洲及太平洋岛屿","非洲","拉丁美洲","平均"];
+  var dataTitles = ["Aisa","Europe","North America","Oceania","Africa","Latin America","Average"];
   // 横轴坐标
   var x = [2005,2006,2007,2008,2009,2010,2011,2012,2013,2014];
   // x轴tick
@@ -105,7 +104,7 @@
   // 圆点半径
   var radius = 3;
   // 图例之间间距
-  var stateD = 20;
+  var stateD = 40;
 
   // 数据缓冲
   var Data = [];
